--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <!-- end blogs -->
 
       <!-- contact -->
-      <section class="contact" id="contact">
+      <section class="contact" id="contact" style="position: relative">
         <div class="content">
           <div class="form">
             <h2>Send Message Us</h2>
