--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="desc">
             <h2>About Me</h2>
             <p>
-              I'm a dedicated student at Universitas Muhammadiyah Sorong, deeply 
+              I'm a dedicated student at University Muhammadiyah Sorong, deeply 
               passionate about Data Science, Game Development, and Cyber 
               Security. My curiosity drives me to explore innovative solutions 
               in these fields, where technology meets creativity. I am eager to 
@@ -176,7 +176,7 @@
               <img src="assets/img/about/gamejava.png" alt="" />
             </div>
             <div class="desc">
-              <h3>Company profile with bootstrap</h3>
+              <h3>A 2D game to learn about Java Language</h3>
             </div>
             <div class="category">
               <p>Game Development / <span class="date">20 Feb 2023</span></p>
