--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="content">
           <h1>I'm Ghiraldy Patrick Toshka Anggawan</h1>
           <p>Developer</p>
+          <p>Bahasa Inggris Profesional - Indah Fajar Wahyuni.,M.Hum</p>
         </div>
       </section>
       <!-- end headeer -->
