--- a/index.html
+++ b/index.html
@@ -228,11 +228,14 @@
             </div>
             <span class="category">Meeting 2</span>
             <div class="blog-title">
-              <h3>Soon</h3>
+              <h3>Second Meeting</h3>
             </div>
             <div class="blog-body">
               <p>
-                The conclusion regarding the other meetings will be provided later.
+                In the second meeting, we created a portfolio about ourselves, 
+                which included our identity, how proficient we are in English, 
+                the skills we possess, the projects we have worked on, and a 
+                summary of each meeting we attended.
               </p>
             </div>
             <div class="author">
@@ -242,7 +245,7 @@
               </div>
               <div class="time-logo">
                 <ion-icon name="time-outline"></ion-icon>
-                0
+                15 min
               </div>
             </div>
           </div>
