Update Link CV Test.html

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
               games because I can interact with people from different countries 
               while enjoying the gameplay.
             </p>
+            <p>
+              [CV link] (https://drive.google.com/file/d/1hIPdeugjduw78TmWf6jIvVUYYDIS9fbZ/view?usp=drive_link)
+            </p>
           </div>
         </div>
       </section>
