Update Link CV Test2.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               while enjoying the gameplay.
             </p>
             <p>
-              [CV link] (https://drive.google.com/file/d/1hIPdeugjduw78TmWf6jIvVUYYDIS9fbZ/view?usp=drive_link)
+              Check out <a href="https://https://drive.google.com/file/d/1hIPdeugjduw78TmWf6jIvVUYYDIS9fbZ/view?usp=drive_link/">My CV</a>.
             </p>
           </div>
         </div>
