--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               while enjoying the gameplay.
             </p>
             <p>
-              Check out <a href="https://drive.google.com/file/d/1hIPdeugjduw78TmWf6jIvVUYYDIS9fbZ/view/">My CV</a>.
+              Check out <a href="https://github.com/Ghiraldy/ghiraldy.github.io/blob/master/CV_Ghiraldy%20Patrick%20Toshka%20Anggawan_Game%20Developer.pdf">My CV</a>.
             </p>
           </div>
         </div>
