--- a/index.html
+++ b/index.html
@@ -325,6 +325,25 @@
         <!-- end footer -->
       </section>
       <!-- end contact -->
+      
+      <!-- cv -->
+      <section id="Blog" class="services" style="margin: 5rem;">
+          <div class="services main-container"></div>
+          <h3 class="pre-title">CV</h3>
+          <div class="card">
+              <h1 class="services-title">My CV</h1>
+              <div class="grid-3">
+                  <div class="services">
+                      <p>
+                          <iframe src="CV_Ghiraldy Patrick Toshka Anggawan_Game Developer.pdf" width="100%" height="600px">
+                              Browser Anda tidak mendukung tampilan PDF.
+                              <a href="CV_Ghiraldy Patrick Toshka Anggawan_Game Developer.pdf">Unduh file PDF di sini</a>.
+                          </iframe>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </section>
     </div>
 
     <!-- swiperjs -->
