--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
             <p>
               Check out <a href="https://github.com/Ghiraldy/ghiraldy.github.io/blob/master/CV_Ghiraldy%20Patrick%20Toshka%20Anggawan_Game%20Developer.pdf">My CV</a>.
             </p>
+            <p>
+              Check out <a href="https://github.com/Ghiraldy/ghiraldy.github.io/blob/master/2439099008_Writing%20a%20Product%20Promotion.pdf">My Product Promotion</a>.
+            </p>
           </div>
         </div>
       </section>
@@ -336,6 +339,23 @@
                           <iframe src="CV_Ghiraldy Patrick Toshka Anggawan_Game Developer.pdf" width="100%" height="600px">
                               Browser Anda tidak mendukung tampilan PDF.
                               <a href="CV_Ghiraldy Patrick Toshka Anggawan_Game Developer.pdf">Unduh file PDF di sini</a>.
+                          </iframe>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+    </div>
+    <!-- Product Promotion -->
+      <section id="Blog" class="services" style="margin: 5rem;">
+          <div class="services main-container"></div>
+          <div class="card">
+              <div class="grid-3">
+                  <div class="services">
+                      <p>
+                          <iframe src="2439099008_Writing a Product Promotion.pdf" width="100%" height="600px">
+                              Browser Anda tidak mendukung tampilan PDF.
+                              <a href="2439099008_Writing a Product Promotion.pdf">Unduh file PDF di sini</a>.
                           </iframe>
                       </p>
                   </div>
